--- a/ClothWeb/Cloth.css
+++ b/ClothWeb/Cloth.css
@@ -1,71 +1,15 @@
 ﻿* {
-	 margin: 0;
+  margin: 0;
   overflow:hidden;
 }
 
 body {
-  background:#333;
+  background:#DDD;
 }
 
 canvas {
-  background:#333;
   width:100%;
-  height:376px;
-  margin:0 auto;
+  height:100%;
   display:block;
 }
 
-#info {
-  position:absolute;
-  left:-1px;
-  top:-1px;
-  width:auto;
-  max-width:380px;
-  height:auto;
-  background:#f2f2f2;
-  border-bottom-right-radius:10px;
-}
-
-#top {
-  background:#fff;
-  width:100%;
-  height:auto;
-  position:relative;
-  border-bottom:1px solid #eee;
-}
-
-p {
-  font-family:Arial, sans-serif;
-  color:#666;
-  text-align:justify;
-  font-size: 16px;
-  margin:10px;
-}
-
-a {
-  font-family:sans-serif;
-  color:#444;
-  text-decoration:none;
-  font-size: 20px;
-}
-
-#site {
-  float:left;
-  margin: 10px;
-  color: #38a;
-}
-
-#close {
-  float:right;
-  margin: 10px;
-}
-
-#p {
-  font-family: Verdana, sans-serif;
-  position:absolute;
-  right:10px;
-  bottom:10px;
-  color:#adf;
-  border: 1px dashed #555;
-  padding:4px 8px;
-}
